lookup data by zone

--- a/devel/Todo
+++ b/devel/Todo
@@ -1,7 +1,5 @@
 TODO
 
+- clusters($code) -- full cluster data in order
 - ensure all data returned is cloned
-- find_cluster(zone) -- reverse map to cluster
-- find_primary(zone) -- first entry from reverse_map to cluster
-- is_primary(zone) -- essentially zone eq is_primary(zone)
 - make caching optional
