--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Time-OlsonTZ-Clustered
 
 {{$NEXT}}
 
+  [DOCS]
+
+  - Fix typo and garu's name (sorry!)
+
 0.001     2013-01-16 15:20:17 America/New_York
 
   - First release
