--- a/README.pod
+++ b/README.pod
@@ -6,7 +6,7 @@ Time::OlsonTZ::Clustered - Olson time zone clusters based on similar offset and 
 
 =head1 VERSION
 
-version 0.001
+version 0.002
 
 =head1 SYNOPSIS
 
@@ -158,7 +158,7 @@ Given an Olson time zone name, returns the primary zone name for the cluster
 containing the zone.  Returns undef or the empty list if the zone is
 not recognized.
 
-=head2 is_primary {
+=head2 is_primary
 
     if ( is_primary("America/Chicago") ) { ... }
 
@@ -288,7 +288,7 @@ Andrew Main (ZEFRAM) for his time zone modules and advice on zone clustering heu
 
 =item *
 
-Breno Olivera (GARU) for his patient explanations and advice regarding Brazilian time zones.
+Breno G. de Oliveira (GARU) for his patient explanations and advice regarding Brazilian time zones.
 
 =back
 
